--- a/server/DomainConfig.json
+++ b/server/DomainConfig.json
@@ -1,9 +1,11 @@
 {
-    "node": {
-        "commands": {
-            "SERVER_CLOSE": "closeServer",
-            "SERVER_LAUNCH": "launchServer"
-        },
-        "DOMAIN_ID": "sbruchmann.staticpreview"
+    "id": "sbruchmann.staticpreview.ServerDomain",
+    "defaults": {
+        "hostname": "0.0.0.0",
+        "port": 3000
+    },
+    "commands": {
+        "CLOSE": "closeServer",
+        "LAUNCH": "launchServer"
     }
 }
