--- a/server/DomainConfig.json
+++ b/server/DomainConfig.json
@@ -5,7 +5,7 @@
         "port": 3000
     },
     "commands": {
-        "CLOSE": "closeServer",
-        "LAUNCH": "launchServer"
+        "STOP": "stop",
+        "START": "start"
     }
 }
