--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sbruchmann.static-preview",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Runs your project on a static web server",
   "repository": {
     "type": "git",
@@ -16,7 +16,8 @@
   "keywords": [
     "static",
     "development",
-    "server"
+    "server",
+    "preview"
   ],
   "categories": [
     "general"
