--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "express": "^4.4.1",
+    "sane": "^0.5.3",
     "serve-index": "^1.1.0",
     "serve-static": "^1.2.1"
   }
