--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "general"
   ],
   "dependencies": {
-    "connect": "^3.3.4"
+    "connect": "^3.3.4",
+    "serve-index": "^1.6.0",
+    "serve-static": "^1.8.0"
   }
 }
